--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,10 +32,21 @@
     <style name="WeatherInfoTextViewData">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:padding">5dp</item>
-        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/textColor</item>
         <item name="android:textAlignment">center</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="WeatherInfoTextViewData.L1" parent="WeatherInfoTextViewData">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="WeatherInfoTextViewData.L2" parent="WeatherInfoTextViewData">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="WeatherInfoTextViewData.L3" parent="WeatherInfoTextViewData">
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="DetailsTemperatureData" parent="WeatherInfoTextViewTitle">
