--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -19,13 +19,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:visibility="@{viewModel.weatherRepo.oneCallModel}" />
+            app:visibility="@{viewModel.weatherRepo.result}" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:viewModel="@{viewModel}"
-            app:visibility="@{viewModel.weatherRepo.oneCallModel}">
+            app:visibility="@{viewModel.weatherRepo.result}">
 
             <ScrollView
                 android:layout_width="match_parent"
