--- a/app/src/main/res/layout/fragment_two_days_layout.xml
+++ b/app/src/main/res/layout/fragment_two_days_layout.xml
@@ -17,14 +17,14 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:visibility="@{viewModel.weatherRepo.oneCallModel}"
+            app:visibility="@{viewModel.weatherRepo.result}"
             android:layout_centerInParent="true"/>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:viewModel="@{viewModel}"
-            app:visibility="@{viewModel.weatherRepo.oneCallModel}">
+            app:visibility="@{viewModel.weatherRepo.result}">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
