Added BaseViewModel. All other view models now extend this one. Deleted TwodaysWeatherViewModel and SevenDaysWeatherViewModle as they can be completely replaced by BaseViewModel

--- a/app/src/main/res/layout/fragment_seven_days_layout.xml
+++ b/app/src/main/res/layout/fragment_seven_days_layout.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="ru.awawa.weatherapp.ui.main.daily.SevenDaysWeatherViewModel" />
+            type="ru.awawa.weatherapp.ui.main.BaseViewModel" />
         <variable
             name="adapter"
             type="ru.awawa.weatherapp.ui.main.daily.SevenDaysWeatherAdapter" />
