--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -21,6 +21,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:visibility="@{viewModel.weatherRepo.result}" />
 
+        <TextView
+            android:id="@+id/tvErrorMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/textColor"
+            android:textAlignment="center"
+            app:visibility="@{viewModel.weatherRepo.result}"
+            app:weatherRepo="@{viewModel.weatherRepo}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -29,7 +43,9 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:visibility="@{viewModel.weatherRepo.result}"
+                app:weatherRepo="@{viewModel.weatherRepo}">
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
